--- a/k8s_demo.yaml
+++ b/k8s_demo.yaml
@@ -1,18 +1,22 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: k8s_demo
+  name: k8sdemo
+  labels:
+    app: k8sdemo
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+       app: k8sdemo
   template:
     metadata:
       labels:
-        app: k8s_demo
+        app: k8sdemo
     spec:
       containers:
-      - name: k8s_demo
+      - name: k8sdemo
         image: k8s_demo:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
- 
